--- a/myApp/src/pages/tabs/tabs.html
+++ b/myApp/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="设备" tabIcon="cog"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="视频" tabIcon="videocam"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="消息" tabIcon="chatboxes"></ion-tab>
 </ion-tabs>
