--- a/myApp/src/pages/device/device-detail/deviceDetail.html
+++ b/myApp/src/pages/device/device-detail/deviceDetail.html
@@ -11,7 +11,7 @@
       设备
     </ion-list-header>
     <ion-item>
-      <ion-toggle [(ngModel)]="computer" checked="false"></ion-toggle>
+      <ion-toggle ng-checked="computer"></ion-toggle>
       <ion-label>
         电脑
       </ion-label>
