推拉流样式

--- a/myApp/src/pages/device/device-detail/deviceDetail.html
+++ b/myApp/src/pages/device/device-detail/deviceDetail.html
@@ -2,12 +2,12 @@
   <ion-navbar>
     <ion-title>
       {{device.buildingNum}} {{device.classroomNum}}
-      <ion-badge *ngIf="device.raspberryStreamStatus==0" color="danger">离线</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==1" color="secondary">空闲</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==2" color="danger">异常</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==3" color="primary">推流</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==4" color="primary">拉流</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==5" color="primary">广播</ion-badge>
+      <ion-badge *ngIf="raspberry==0" color="danger">离线</ion-badge>
+      <ion-badge *ngIf="raspberry==1" color="secondary">空闲</ion-badge>
+      <ion-badge *ngIf="raspberry==2" color="danger">异常</ion-badge>
+      <ion-badge *ngIf="raspberry==3" color="primary">推流中</ion-badge>
+      <ion-badge *ngIf="raspberry==4" color="primary">拉流中</ion-badge>
+      <ion-badge *ngIf="raspberry==5" color="primary">广播中</ion-badge>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -19,7 +19,7 @@
       设备管理
     </ion-list-header>
     <ion-item>
-      <ion-toggle [(ngModel)]="computer" (ngModelChange)="deviceManage($event,'computer')"></ion-toggle>
+      <ion-toggle [(ngModel)]="computer" (ngModelChange)="deviceManage($event,'computer')" [disabled]="disableJudge"></ion-toggle>
       <ion-label>
         电脑
       </ion-label>
@@ -27,7 +27,7 @@
     </ion-item>
     
     <ion-item>
-      <ion-toggle [(ngModel)]="projector" (ngModelChange)="deviceManage($event,'projector')"></ion-toggle>
+      <ion-toggle [(ngModel)]="projector" (ngModelChange)="deviceManage($event,'projector')" [disabled]="disableJudge"></ion-toggle>
       <ion-label>
         投影仪
       </ion-label>
@@ -35,7 +35,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-toggle [(ngModel)]="camera"></ion-toggle>
+      <ion-toggle [(ngModel)]="camera" [disabled]="disableJudge"></ion-toggle>
       <ion-label>
         摄像头
       </ion-label>
@@ -49,17 +49,28 @@
       摄像头
     </ion-list-header>
     <ion-item *ngFor="let camera of cameras">
-      <ion-toggle [ngModel]="camera.cameraStatus==1?1:0" (ngModelChange)="cameraManage($event,camera.cameraId)" ></ion-toggle>
+      <ion-toggle [ngModel]="camera.cameraStatus==1?1:0" (ngModelChange)="cameraManage($event,camera.cameraId)" [disabled]="disableJudge"></ion-toggle>
       <ion-label>{{camera.cameraAngle}}</ion-label>    
     </ion-item>
   </ion-list>
 
-  <ion-list no-border>
+  <ion-list no-border no-lines>
 
     <ion-list-header class="list-header">
       视频管理
     </ion-list-header>
+    <ion-segment [(ngModel)]="pet">
+      <ion-segment-button value="pull">
+        拉流
+      </ion-segment-button>
+      <ion-segment-button value="push">
+        推流
+      </ion-segment-button>
+      <ion-segment-button value="broadcast">
+        广播
+      </ion-segment-button>
 
+    </ion-segment>
   </ion-list>
 
 </ion-content>
