--- a/myApp/src/pages/device/device-detail/deviceDetail.html
+++ b/myApp/src/pages/device/device-detail/deviceDetail.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
       {{device.buildingNum}} {{device.classroomNum}}
       <ion-badge *ngIf="raspberry==0" color="danger">离线</ion-badge>
