--- a/myApp/src/pages/device/device-detail/modal/buildClassModal.html
+++ b/myApp/src/pages/device/device-detail/modal/buildClassModal.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
       选择教室
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <span ion-text color="primary" showWhen="ios">取消</span>
+        <span ion-text showWhen="ios">取消</span>
         <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
       </button>
     </ion-buttons>
