mobile智慧教室完成

--- a/myApp/src/pages/device/device.html
+++ b/myApp/src/pages/device/device.html
@@ -40,9 +40,9 @@
       <ion-badge *ngIf="device.raspberryStreamStatus==0" item-right color="danger">离线</ion-badge>
       <ion-badge *ngIf="device.raspberryStreamStatus==1" item-right color="secondary">空闲</ion-badge>
       <ion-badge *ngIf="device.raspberryStreamStatus==2" item-right color="danger">异常</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==3" item-right color="primary">推流</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==4" item-right color="primary">拉流</ion-badge>
-      <ion-badge *ngIf="device.raspberryStreamStatus==5" item-right color="primary">广播</ion-badge>
+      <ion-badge *ngIf="device.raspberryStreamStatus==3" item-right color="warning">推流</ion-badge>
+      <ion-badge *ngIf="device.raspberryStreamStatus==4" item-right color="warning">拉流</ion-badge>
+      <ion-badge *ngIf="device.raspberryStreamStatus==5" item-right color="warning">广播</ion-badge>
     </button>  
   </ion-list>     
  </ion-content>
