--- a/myApp/src/pages/login/login.html
+++ b/myApp/src/pages/login/login.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar hideBackButton="true" color="primary">
     <ion-title>登录</ion-title>
   </ion-navbar>
 </ion-header>
