--- a/myApp/src/pages/device/device-detail/modal/pushModal.html
+++ b/myApp/src/pages/device/device-detail/modal/pushModal.html
@@ -21,9 +21,9 @@
   </div>
   <ion-card>
     
-    <ion-card-content>
+    <ion-card-content style="width:100%;height: 400px;" >
       <div class="videoBox">
-          <div id="palyerVideoBox"></div>
+          <div id="playerVideoBox"></div>
       </div><!-- videoBox -->
     </ion-card-content>
     
