--- a/myApp/src/index.html
+++ b/myApp/src/index.html
@@ -37,6 +37,7 @@
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
   <script src="assets/js/jwplayer/jwplayer.js" ></script>
+  <script>jwplayer.key="iP+vLYU9H5KyhZeGt5eVuJJIoULUjltoaMeHXg==";</script>
   <script src="assets/js/jwplayer/cyberplayer.js" ></script>
 
 </body>
