--- a/myApp/src/pages/device/device-detail/deviceDetail.html
+++ b/myApp/src/pages/device/device-detail/deviceDetail.html
@@ -66,7 +66,6 @@
       <ion-label>
         推流
       </ion-label>
-      <button ion-button item-left color="primary" (click)="openPushModal()" [disabled]="disableJudge||disablePush">播放视频</button>
     </ion-item>
     
     <ion-item>
@@ -81,7 +80,6 @@
         广播
       </ion-label>
     </ion-item>
-
   </ion-list>
-
+<button ion-button full (click)="openPushModal()" [disabled]="disableJudge">播放视频</button>
 </ion-content>
