--- a/myApp/src/pages/device/device-detail/deviceDetail.html
+++ b/myApp/src/pages/device/device-detail/deviceDetail.html
@@ -81,5 +81,7 @@
       </ion-label>
     </ion-item>
   </ion-list>
-<button ion-button full (click)="openPushModal()" [disabled]="disableJudge">播放视频</button>
+  <div>
+    <button ion-button color="primary" block (click)="openPushModal()" [disabled]="disableJudge">播放视频</button>
+  </div>
 </ion-content>
