1、权限跨域 2、无权限判断 3、详情页获取最新数据

--- a/myApp/src/pages/device/device-detail/modal/pushModal.html
+++ b/myApp/src/pages/device/device-detail/modal/pushModal.html
@@ -14,7 +14,7 @@
 <ion-content padding class="outer-content">
   <div padding>
     <ion-segment [(ngModel)]="cameraSegment" (ngModelChange)="segmentChange($event)">
-      <ion-segment-button *ngFor="let camera of cameras" value="{{camera.cameraId}}">
+      <ion-segment-button *ngFor="let camera of cameras;let i = index" value="{{i+1}}">
         {{camera.cameraAngle}}
       </ion-segment-button>
     </ion-segment>
